<resources>
    <string name="app_name">ArduinoControl</string>
    <string name="device_name">DeviceName: </string>
    <string name="man_name">ManufacturerName: </string>
    <string name="product_name">ProductName: </string>
    <string name="usb_version">Version: </string>
    <string name="serial_number">SerialNumber: </string>
    <string name="device_id">DeviceID: </string>
    <string name="vendor_id">VendorID: </string>
    <string name="product_id">ProductID: </string>
    <string name="device_class">DeviceClass: </string>
    <string name="device_subclass">DeviceSubClass: </string>
    <string name="device_protocol">DeviceProtocol: </string>
    <string name="config_count">ConfigCount: </string>

    <string name="status_info">StatusInfo</string>
    <string name="list_devices">ListDevices</string>
    <string name="forward">Forward</string>
    <string name="back">Back</string>
    <string name="left">Left</string>
    <string name="right">Right</string>

    <string name="main_page">MainPage</string>
    <string name="movement_title">MovementController</string>
    <string name="voiceassisant_title">VoiceAssisant</string>

    <string name="show_movecontroller">ShowMovementController</string>
    <string name="show_voiceassisant">ShowVoiceAssisant</string>
    <string name="start_recognize">StartRecognize</string>
    <string name="stop_recognize">StopRecognize</string>
    <string name="cancel_recognize">CancelRecognize</string>
    <string name="turnon_purifier">TurnOnPurify</string>
    <string name="turnoff_purifier">TurnOffPurify</string>
    <string name="purifier_is_on">Purifier is on.</string>
    <string name="purifier_is_off">Purifier is off.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
