<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ai.robot.ipurifier.view.MovementFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textStatus"
            android:layout_width="match_parent"
            android:layout_height="198dp"
            android:text="@string/status_info" />

        <Button
            android:id="@+id/btnForward"
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:background="@mipmap/button_bg"
            android:text="@string/forward" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLeft"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@mipmap/button_bg"
                android:text="@string/left" />

            <Button
                android:id="@+id/btnRight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@mipmap/button_bg"
                android:text="@string/right" />
        </LinearLayout>

        <Button
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:background="@mipmap/button_bg"
            android:text="@string/back" />
    </LinearLayout>

</FrameLayout>
